MFC r283290

Bump rx_overruns when indicated by the ICR mask.

PR:		199716
Sponsored by:	Limelight Networks